--- a/WebApplication2/Views/Products/Details.cshtml
+++ b/WebApplication2/Views/Products/Details.cshtml
@@ -16,6 +16,7 @@
     @if (found)
         {
             <p>the id is @p.id , the name is @p.name , the price is @p.price</p>
+            <img src="@p.img" style="width: 200px; height: 200px">
         }
         else
         {
