--- a/WebApplication2/Views/Products/Index.cshtml
+++ b/WebApplication2/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
-﻿
-@{
-    Layout = null;
-    var products = (List<Product>)ViewData["products"];
+﻿@{
+    Layout = "_Layout1Web";
+    var products = (List<Product>) ViewData["products"];
+    var backgroundcolor = (string) ViewData["color"];
 }
 
 <!DOCTYPE html>
@@ -9,15 +9,46 @@
 <html>
 <head>
     <title>title</title>
+    <style>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+    
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: center;
+      padding: 8px;
+}
+    </style>
 </head>
 <body>
 <div>
-    <ul>
-    @foreach (var p in products)
-    {
-        <li>the id is @p.id , the name is @p.name , the price is @p.price</li>
-    }
-    </ul>
+    <table class="table table-striped table-dark" style="width: 100% ; align-content: center; background-color: @backgroundcolor">
+        <tr>
+            <th>id</th>
+            <th>name</th>
+            <th>price</th>
+            <th>image</th>
+            <th>page</th>
+            
+        </tr>
+        @foreach (var p in products)
+        {
+            <tr>
+                <td>@p.id</td>
+                <td>@p.name</td>
+                <td>@p.price</td>
+                <td>
+                    <img src="@p.img" style="width: 100px; height: 100px">
+                </td>
+                <td>
+                    <a href="/products/Details/@p.id"><button class="btn-outline-dark">Details</button></a>
+                </td>
+            </tr>
+        }
+    </table>
 </div>
 </body>
 </html>
